--- a/page6.html
+++ b/page6.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-u" data-rv-view="657">
+<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-u" data-rv-view="704">
 
     
 
@@ -68,7 +68,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
