--- a/page6.html
+++ b/page6.html
@@ -9,11 +9,11 @@
   <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
   <meta name="description" content="Site Maker Description">
   <title>Page 6</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-u" data-rv-view="1177">
+<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-u" data-rv-view="2798">
 
     
 
@@ -39,42 +39,33 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
-                         <img src="assets/images/ori-website.png-198x0-q85-crop-smart-198x198.png" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
+                    <a href="westay.html">
+                         <img src="assets/images/90909-917x305.png" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
-                        MOBIRISE
-                    </a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="westay.html"></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="westay.html">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+                    <a class="nav-link link text-white display-4" href="westay.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        About Us
-                    </a>
+                    <a class="nav-link link text-white display-4" href="https://www.instagram.com/westay18/?hl=zh-tw"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Instagram &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-1" href="https://mobirise.com">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "><br></span></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="https://mobirise.com"></a></div>
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
