--- a/page7.html
+++ b/page7.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-1k" data-rv-view="2811">
+<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-1k" data-rv-view="2983">
 
     
 
@@ -59,7 +59,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/h">how to make a website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
