--- a/page6.html
+++ b/page6.html
@@ -23,11 +23,11 @@
   
 </head>
 <body>
-<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-u" data-rv-view="3252">
+<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-u" data-rv-view="3338">
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -43,15 +43,12 @@
                          <img src="assets/images/90909-917x305.png" alt="Mobirise" title="" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="westay.html"></a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="westay.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://www.instagram.com/westay18/?hl=zh-tw"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Instagram &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+                    <a class="nav-link link text-white display-4" href="https://www.instagram.com/westay18/?hl=zh-tw"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="https://mobirise.com"></a></div>
         </div>
@@ -59,7 +56,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/e">web builder software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co">Mobirise</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
