--- a/page7.html
+++ b/page7.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qxaZXfA7eq" once="menu" id="menu2-27" data-rv-view="272">
+<section class="menu cid-qxaZXfA7eq" once="menu" id="menu2-27" data-rv-view="178">
 
     
 
@@ -54,7 +54,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/g">how to create your own website for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
