--- a/page4.html
+++ b/page4.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-q" data-rv-view="1593">
+<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-q" data-rv-view="2343">
 
     
 
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="header9 cid-qxaCgGu8qr mbr-fullscreen mbr-parallax-background" id="header9-1x" data-rv-view="1595">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><section class="header9 cid-qxaCgGu8qr mbr-fullscreen mbr-parallax-background" id="header9-1x" data-rv-view="2345">
 
     
 
@@ -65,7 +65,7 @@
     <div class="container">
         <div class="media-container-column mbr-white col-md-8">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1"></h1>
-            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>條款與政策&nbsp;</strong></h3>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong><a href="page4.html">條款與政策&nbsp;</a></strong></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-7"><strong>條款與政策
 <br>有關本公司
 </strong><br>-本公司Westay18 為一有代購性質的商店，只賺取運費及手續費所得，所售賣的全為正貨，絕不售賣水貨， 故不違反水貨販賣條例
