--- a/page4.html
+++ b/page4.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-q" data-rv-view="3792">
+<section class="menu cid-qx6xknWgE7" once="menu" id="menu1-q" data-rv-view="4416">
 
     
 
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="header9 cid-qxaCgGu8qr mbr-fullscreen mbr-parallax-background" id="header9-1x" data-rv-view="3794">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="header9 cid-qxaCgGu8qr mbr-fullscreen mbr-parallax-background" id="header9-1x" data-rv-view="4418">
 
     
 
